@@ -1,3 +1,9 @@
+2020-09-18 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/x/x_toolbars.c: Add function documentation:
+
+        * x_toolbars_set_show_tooltips
+
 2020-09-17 Wiley E. Hill <wileyhill@gmail.com>
 
     * etc/system-gschemrc.scm: Revise attributes-detach menu item tooltip.
